# scran-cli

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: run-tests.yaml
src/: load_features.hpp  main.cpp  mito.cpp  mito.h
